# chess-nn

./: Cargo.toml  README.md  TODO.md  eval_positions.py  move_chess_pieces.py  positions  positions_evaluated_2023-11-11_00-18-58  positions_lt_part2_evaluated_2023-11-12_12-48-37  positions_pc_part2_evaluated_2023-11-13_09-35-55  positions_pc_part6_evaluated_2023-11-14_09-01-36  results-2023-11-17.txt
.crashes/: rustc-ice-2023-11-10T11_04_23-5406.txt
.rustc-crashes/: rustc-ice-2023-11-10T11_03_25-5341.txt  rustc-ice-2023-11-10T11_03_25-5342.txt  rustc-ice-2023-11-10T11_03_34-5363.txt  rustc-ice-2023-11-10T11_03_34-5364.txt  rustc-ice-2023-11-10T11_04_23-5404.txt
positions/: lt_part3_evaluated_2023-11-13_09-46-52  lt_part4_evaluated_2023-11-13_19-26-50  lt_part5  lt_part5_evaluated_2023-11-16_21-16-25  pc_part10_evaluated_2023-11-16_18-54-26  pc_part11_evaluated_2023-11-17_07-51-10  pc_part1_evaluated_2023-11-12_15-17-11  pc_part3_evaluated_2023-11-13_14-34-22  pc_part4_evaluated_2023-11-13_18-45-15  pc_part5_evaluated_2023-11-13_19-27-46  pc_part7_evaluated_2023-11-14_13-26-40  pc_part8_evaluated_2023-11-15_09-36-39  pc_part9_evaluated_2023-11-16_15-59-12
src/: activation_functions.rs  ai.rs  ai_player.rs  ais_generator.rs  either.rs  extensions.rs  float_type.rs  linalg_types.rs  main.rs  math_aliases.rs  math_functions.rs  math_functions_pade_approx.rs  neural_network.rs  neural_network_gpu.rs  neural_network_unmut.rs  neuron.rs  random.rs  simple_rng.rs  utils_hashmap.rs  utils_io.rs
src/neural_network/: mod.rs
src/neural_network_col/: vector_type.rs
(+18 files in other folders)
