[package]
name = "chess_nn"
version = "0.9.6"
edition = "2021"
authors = ["dmyTRUEk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
# lto = "fat"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
chess = "3.2.0"
chrono = "0.4.31"
image = "0.24.7"
lazy_static = "1.4.0"
nalgebra = "0.32.3"
rand = "0.8.5"
rayon = "1.8.0"
